tests/NormalTests/paczka1/fuzzy1/95358007.err
Error in line 3: rvhCVSE2WkO S246 22,8
Error in line 4: S619 S246 52,9
Error in line 32: B5Sh3gfhv S246 86,1
